{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 21,
  "lineage": "b5d05614-577e-b12b-47b0-e0786c515b93",
  "resources": [
    {
      "module": "module.aws-eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:632264215449:vpc/vpc-f0995498",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-891be9e0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-803722e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f0995498",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-cf0ea7a7",
            "owner_id": "632264215449",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.aws-eks.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-030e490c34394591b",
            "arn": "arn:aws:ec2:eu-central-1:632264215449:instance/i-0b664c3e1ec245464",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b664c3e1ec245464",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zsapkagy-ec2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06dc9268547985394",
            "private_dns": "ip-172-31-38-90.eu-central-1.compute.internal",
            "private_ip": "172.31.38.90",
            "public_dns": "ec2-18-194-243-136.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.243.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c449b583721eeb9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "aws-eks-sg-20211111181330907600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-25122c6f",
            "tags": {
              "Content": "Kubectl, Github",
              "Name": "AWS - Kubernetes",
              "SSH": "true",
              "Target": "AWS",
              "Terraform": "true",
              "Type": "workplace"
            },
            "tags_all": {
              "Content": "Kubectl, Github",
              "Name": "AWS - Kubernetes",
              "SSH": "true",
              "Target": "AWS",
              "Terraform": "true",
              "Type": "workplace"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "aws-eks-instance"
            },
            "vpc_security_group_ids": [
              "sg-0d72ea53217b8b799"
            ]
          },
          "dependencies": [
            "module.aws-eks.aws_key_pair.access_key",
            "module.aws-eks.data.aws_ami.amazon_linux_2",
            "module.aws-eks.data.aws_vpc.default",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this_name_prefix",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_egress_rules",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_egress_with_self",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_ingress_rules",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_ingress_with_self",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.egress_rules",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.egress_with_self",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.ingress_rules",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.ingress_with_self",
            "module.aws-eks.module.security_group.module.sg.aws_security_group_rule.ingress_with_source_security_group_id"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks.module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:632264215449:security-group/sg-0d72ea53217b8b799",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d72ea53217b8b799",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aws-eks-sg-20211111181330907600000001",
            "name_prefix": "aws-eks-sg-",
            "owner_id": "632264215449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-eks-sg",
              "Type": "workplace"
            },
            "tags_all": {
              "Name": "aws-eks-sg",
              "Type": "workplace"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-f0995498"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks.module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3084545949",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d72ea53217b8b799",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks.data.aws_vpc.default",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks.module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3139417452",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d72ea53217b8b799",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks.data.aws_vpc.default",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks.module.security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-3512694955",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d72ea53217b8b799",
            "self": true,
            "source_security_group_id": "sg-0d72ea53217b8b799",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks.data.aws_vpc.default",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this",
            "module.aws-eks.module.security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}